# xi-tinkerer

./: package-lock.json
.github/workflows/: build.yml  release.yml
client/: package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.tsx  bindings.ts  custom_bindings.ts  util.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: migrated.json
client/src-tauri/src/: app_persistence.rs  commands.rs  dat_query.rs  errors.rs  main.rs  state.rs
client/src/components/: DatTable.tsx  Home.tsx  Select.tsx  Sidebar.tsx  Table.tsx  ZoneData.tsx
client/src/store/: folders.ts  logs.ts  processing.ts  workingFiles.ts
crates/common/src/: byte_functions.rs  byte_walker.rs  checking_byte_walker.rs  file_byte_walker.rs  lib.rs  slice_byte_walker.rs  vec_byte_walker.rs
crates/dats/: Cargo.toml
crates/dats/src/: base.rs  id_mapping.rs
crates/dats/src/formats/: event.rs  menu_table.rs  mod.rs  opcode_descriptions.rs
crates/dats/src/formats/zone_data/: collision_mesh.rs  mod.rs  zone_mmb.rs  zone_model.rs
crates/encoding/src/: decoder.rs  encoder.rs  lib.rs
crates/encoding/src/chunk_key_tables/: mod.rs
crates/processor/: Cargo.toml
crates/processor/src/: dat_descriptor.rs
