[package]
name = "xi_tinkerer"
version = "0.2.0"
description = "XI Tinkerer"
authors = ["InoUno"]
license = "AGPL-3.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-specta = { version = "2.0.0-rc.11", features = ["typescript"] }
specta = "2.0.0-rc.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
glob = "0.3.1"
dats = { path = "../../crates/dats" }
processor = { path = "../../crates/processor" }
anyhow = "1.0.72"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
parking_lot = "0.12.1"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
notify = "6.0.1"
walkdir = "2.3.3"
clap = { version = "4.5.0", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
windows = { version = "0.52.0", features = ["Win32_System_Console", "Win32_Foundation"] }
